corrected cardFive title alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -207,6 +207,7 @@ h2 {
 
     margin-top: 1.5rem;
     width: 50%;
+    text-align: center;
 }
 
 /* Card Six */
